Creacio de forms auxiliars amb redirecció

--- a/WindowsFormsApp1/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -52,8 +52,29 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMenjar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenjar.Designer.cs">
+      <DependentUpon>FormMenjar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormViatge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormViatge.Designer.cs">
+      <DependentUpon>FormViatge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenjar.resx">
+      <DependentUpon>FormMenjar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormViatge.resx">
+      <DependentUpon>FormViatge.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
