--- a/WindowsFormsApp1/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAnimals.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAnimals.Designer.cs">
+      <DependentUpon>FormAnimals.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMenjar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAnimals.resx">
+      <DependentUpon>FormAnimals.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenjar.resx">
       <DependentUpon>FormMenjar.cs</DependentUpon>
